--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<div id="main">
+<!--<div id="main">
 	<div id="btnInfo">SHOW INFO</div>
 	<table id="players">
 	</table>
@@ -23,6 +23,32 @@
 	<div class="info" id="info_id"></div>
 	<div class="info" id="info_name"></div>
 	<div class="info" id="info_job"></div>
+</div>-->
+<div class="spectate">
+	<div class="header"><h2>esx_spectate</h2><i class="fa fa-times" id="close"></i></div>
+
+	<div class="users">
+		<div class="user">
+			<span class="user-id">1</span>
+			<span class="user-name">renaiku</span>
+			<span class="user-actions">
+				<button class="spec" data-spectate="1">Spectate</button>
+				<button class="kick" data-kick="1">KICK</button>
+			</span>
+		</div>
+		<div class="user">
+			<span class="user-id">2</span>
+			<span class="user-name">CmJustice</span>
+			<span class="user-actions">
+				<button class="spec" data-spectate="2">Spectate</button>
+				<button class="kick" data-kick="2">KICK</button>
+			</span>
+		</div>
+
+
+	</div>
+
+
 </div>
 
 
